# Diffusefit

./: README.md  pyproject.toml  requirements.txt
configs/: base.yaml  dresscode.yaml  viton.yaml  viton_hd.yaml
configs/ablations/: fusion_add.yaml  fusion_concat.yaml  gpwarp_variant.yaml  no_clip_semantics.yaml  no_co_training.yaml  no_garment_replacement.yaml  no_limb_aware_generator.yaml  no_limb_weight_maps.yaml  no_pose_guided_flow.yaml  no_target_semantic_layout.yaml  sample_100.yaml  sample_25.yaml  sample_50.yaml
diffusefit/: __init__.py  config.py  datasets.py  diffusion.py  limb_generator.py  losses.py  metrics.py  model.py  modules.py  parsing.py  pose_alignment.py  trainers.py  utils.py
scripts/: benchmark.py  evaluate.py  infer.py  prepare_dataset.py  run_ablation.py  train_all.py  train_stage1.py  train_stage2.py  train_stage3.py
tests/: test_config.py  test_model_shapes.py
