[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusefit"
version = "0.1.0"
description = "Implementation of DiffuseFit for image-based virtual try-on"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hamza Mukhtar", email = "Hamza.hm.mukhtar@gmail.com" }
]
dependencies = []

[tool.setuptools]
packages = ["diffusefit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
